feat:uuid 1. 部分逻辑优化 2. 完善README.md

--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,10 @@
+# 雪花算法
 snowflake:
-  # 机器ID
+  # 机器ID：集群部署每个服务需要确保 workerid 不同， 参考值 1,2,3,4,5.... , 集群部署建议3~5个即可
   workerid: 1
+
+# 地址
+address:
+  # 端口号： 同一机器，集群部署，需要修改端口号
+  prot: 12345
 
